# Home_work_DS_3

./: authors.json  autors.py  main.py  pyproject.toml  quotes.py
